Eliminate stream counts where practical. Refactor.